# baeuda

./: .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: pythonapp.yml
baeuda/: __init__.py  anki.py  run.py  settings.py  test_settings.py
baeuda/datasource/: joplin.py  mdfile.py
