[metadata]
name = baeuda
description = ":mortar_board: Baeuda - 배우다 - Learn - Create Anki Cards from Joplin Notes"
author = FoxMaSk
author_email = foxmask@protonmail.com
maintainer = FoxMaSk
maintainer_email = foxmask@protonmail.com
url = https://github.com/foxmask/baeuda
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD License
keywords = anki card joplin
version = attr: baeuda.__version__
classifiers =
	Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Internet
	Topic :: Communications
	Topic :: Database

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires =
    beautifulsoup4
    joplin-api
    pypandoc
    requests

[options.packages.find]
exclude =
	tests

[flake8]
max-line-length = 120
exclude = .tox,build,.eggs
ignore = F401

