[metadata]
name=baeuda
description=":mortar_board: Baeuda - 배우다 - Learn - Create Anki Cards from various datasources"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://github.com/foxmask/baeuda
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=anki card markdown
version=file: VERSION.txt

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages=find:
zip_safe=false
include_package_data=true
install_requires=
    beautifulsoup4
    pypandoc
    httpx

[options.packages.find]
exclude=
	tests

[flake8]
max-line-length=120
exclude=.tox,build,.eggs
ignore=F401

